--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
   background-color: #f9f9f9;
 }
 #header-container {
-  background-color: #0D98BA;
+  background-color: #008040;
   padding: 3px;
   text-align: center;
   color: white;
@@ -12,6 +12,7 @@ body {
 h1 {
   text-align: center;
   color: white;
+  front-size: 42px;
 }
 body {
   font-family: monospace, sans-serif;
